tests/files/type_checker_tests/should_pass/357.cmdr
//Should allow redeclaring variables
x: int = 4;
x: float = 3.2;
x = true;
x = "hi";