tests/files/type_checker_tests/should_fail/209.cmdr
//Should fail using variables incorrectly
alias x = ls;
y: x = 3;
